k8s/policies/disallow-root.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-root-user
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  matchConditions:
    - name: exclude-namespaces
      expression: "request.namespace != 'falco' && request.namespace != 'monitoring' && request.namespace != 'kyverno' && request.namespace != 'argocd'"
  validations:
    - message: "FORTRESS SECURITY: Running as root is not allowed!"
      expression: >
        object.spec.securityContext.runAsNonRoot == true &&
        object.spec.containers.all(c,
          has(c.securityContext) &&
          c.securityContext.runAsNonRoot == true
        )
